--- a/julia/problem_053.ipynb
+++ b/julia/problem_053.ipynb
@@ -5,8 +5,36 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 53\n",
+    "# Problem 53\n",
     "https://projecteuler.net/problem=53"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5e25f26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Julia v\", string(VERSION))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2d23da97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
    ]
   },
   {
@@ -19,42 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2d23da97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b0db654d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "f (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "f(n, r) = factorial(big(n)) / (factorial(big(r)) * factorial(big(n - r)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4eb891e4",
-   "metadata": {},
    "outputs": [],
    "source": [
+    "f(n, r) = factorial(big(n)) / (factorial(big(r)) * factorial(big(n - r)))\n",
+    "\n",
     "@assert f(5, 3) == 10"
    ]
   },
@@ -63,7 +62,7 @@
    "id": "a8f3fe22",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "### Solution 1 (function)"
    ]
   },
   {
@@ -75,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "4075"
+       "combinatoric_selections (generic function with 3 methods)"
       ]
      },
      "metadata": {},
@@ -83,13 +82,15 @@
     }
    ],
    "source": [
-    "counter = 0\n",
-    "for n in 1:100, r in 1:100\n",
-    "    if r ≤ n && f(n, r) > 1_000_000\n",
-    "        counter += 1\n",
+    "function combinatoric_selections(x=100, y=1_000_000)\n",
+    "    counter = 0\n",
+    "    for n in 1:x, r in 1:x\n",
+    "        if r ≤ n && f(n, r) > y\n",
+    "            counter += 1\n",
+    "        end\n",
     "    end\n",
-    "end\n",
-    "counter"
+    "    return counter\n",
+    "end"
    ]
   },
   {
@@ -99,18 +100,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.848 ms (124294 allocations: 3.39 MiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 915 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m2.912 ms\u001b[22m\u001b[39m … \u001b[35m222.960 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 10.82%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m3.189 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m5.442 ms\u001b[22m\u001b[39m ± \u001b[32m 12.365 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.35% ±  6.90%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▂\u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▆\u001b[32m▁\u001b[39m\u001b[39m▅\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m▆\u001b[39m▅\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m \u001b[39m▇\n",
-       "  2.91 ms\u001b[90m      \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m      61.7 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m3.39 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m124294\u001b[39m."
+       "4075"
       ]
      },
      "metadata": {},
@@ -118,25 +117,7 @@
     }
    ],
    "source": [
-    "b = @benchmark begin\n",
-    "    counter = 0\n",
-    "    for n in 1:100, r in 1:100\n",
-    "        if r ≤ n && f(n, r) > 1_000_000\n",
-    "            counter += 1\n",
-    "        end\n",
-    "    end\n",
-    "    counter\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "841bacf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(53, b);"
+    "@btime combinatoric_selections()"
    ]
   },
   {
@@ -144,15 +125,22 @@
    "id": "34b1877d",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "### Solution 2 (oneliner)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "805ec40d",
+   "execution_count": 6,
+   "id": "846481f6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.898 ms (124294 allocations: 3.39 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -164,196 +152,13 @@
     }
    ],
    "source": [
-    "counter = 0\n",
-    "for n in 1:100, r in 1:100\n",
-    "    r ≤ n && f(n, r) > 1_000_000 ? counter += 1 : nothing\n",
-    "end\n",
-    "counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "811f3e54",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 959 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m2.926 ms\u001b[22m\u001b[39m … \u001b[35m89.621 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 37.24%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m3.324 ms              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m5.212 ms\u001b[22m\u001b[39m ± \u001b[32m11.058 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.11% ±  6.17%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▃\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▆\u001b[39m▃\u001b[39m▅\u001b[39m▄\u001b[39m \u001b[39m▇\n",
-       "  2.93 ms\u001b[90m      \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m     69.8 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m3.39 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m124294\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark begin\n",
-    "    counter = 0\n",
-    "    for n in 1:100, r in 1:100\n",
-    "        r ≤ n && f(n, r) > 1_000_000 ? counter += 1 : nothing\n",
-    "    end\n",
-    "    counter\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1b2810ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(53, b);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6800f11c",
-   "metadata": {},
-   "source": [
-    "#### Solution 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "cf179a34",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4075"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sum(Bool[r ≤ n && f(n, r) > 1_000_000 for n in 1:100, r in 1:100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6deb4a65",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 897 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m3.112 ms\u001b[22m\u001b[39m … \u001b[35m123.655 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 48.38%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m3.460 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m5.570 ms\u001b[22m\u001b[39m ± \u001b[32m 12.159 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.66% ±  6.29%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▇\u001b[32m▃\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▅\u001b[39m▁\u001b[39m▅\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▄\u001b[39m▃\u001b[39m \u001b[39m▇\n",
-       "  3.11 ms\u001b[90m      \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m      76.7 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m3.40 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m124297\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark sum(Bool[r ≤ n && f(n, r) > 1_000_000 for n in 1:100, r in 1:100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "0bc8e7d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(53, b);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f402b207",
-   "metadata": {},
-   "source": [
-    "#### Solution 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d6041271",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4075"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sum(Int[1 for n in 1:100, r in 1:100 if r ≤ n && f(n, r) > 1_000_000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "03891c64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 944 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m3.001 ms\u001b[22m\u001b[39m … \u001b[35m84.445 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 41.52%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m3.356 ms              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m5.295 ms\u001b[22m\u001b[39m ± \u001b[32m11.591 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m14.44% ±  6.15%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▅\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▃\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m \u001b[39m▇\n",
-       "  3 ms\u001b[90m         \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m     77.3 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m3.44 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m124304\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark sum(Int[1 for n in 1:100, r in 1:100 if r ≤ n && f(n, r) > 1_000_000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "5e8f26f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(53, b);"
+    "@btime sum(r ≤ n && f(n, r) > 1_000_000 for n in 1:100, r in 1:100)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -361,7 +166,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
