--- a/julia/problem_055.ipynb
+++ b/julia/problem_055.ipynb
@@ -39,77 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1495d98e",
-   "metadata": {},
-   "source": [
-    "### Solution 1 (counter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ffe751d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "lychrel (generic function with 3 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function lychrel(stop=9999, iterations=50)\n",
-    "    counter = 0\n",
-    "    for n in big(1):big(stop)\n",
-    "        for _ in 1:iterations\n",
-    "            n += sum([v * 10^(i-1) for (i, v) in enumerate(reverse(digits(n)))])\n",
-    "            if digits(n) == reverse(digits(n))\n",
-    "                counter += 1\n",
-    "                break\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    return stop - counter\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "42cfa19d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  38.713 ms (1639827 allocations: 56.13 MiB)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "249"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "@btime lychrel()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3b0be18c",
    "metadata": {},
    "source": [
-    "### Solution 2"
+    "### Solution"
    ]
   },
   {
@@ -117,28 +50,20 @@
    "execution_count": 5,
    "id": "febb9dc9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "islychrel (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function islychrel(n::Int, iterations=50)::Bool\n",
     "    n = big(n)\n",
     "    for _ in 1:iterations\n",
-    "        n += sum([k * 10^(i-1) for (i, k) in enumerate(reverse(digits(n)))])\n",
+    "        n += sum(val * 10^(idx-1) for (idx, val) in enumerate(reverse(digits(n))))\n",
     "        if digits(n) == reverse(digits(n))\n",
     "            return false\n",
     "        end\n",
     "    end\n",
     "    return true\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert islychrel(4994)"
    ]
   },
   {
@@ -151,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  38.270 ms (1579837 allocations: 54.83 MiB)\n"
+      "  37.408 ms (1491293 allocations: 49.65 MiB)\n"
      ]
     },
     {
