--- a/julia/problem_041.ipynb
+++ b/julia/problem_041.ipynb
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.461 s (201005820 allocations: 12.96 GiB)\n"
+      "  7.655 s (201005820 allocations: 12.96 GiB)\n"
      ]
     },
     {
@@ -112,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.587 s (201005820 allocations: 12.96 GiB)\n"
+      "  7.691 s (201005820 allocations: 12.96 GiB)\n"
      ]
     },
     {
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.930 s (201005815 allocations: 12.58 GiB)\n"
+      "  7.780 s (201005815 allocations: 12.58 GiB)\n"
      ]
     },
     {
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7.507 s (198934270 allocations: 12.85 GiB)\n"
+      "  7.670 s (198934270 allocations: 12.85 GiB)\n"
      ]
     },
     {
@@ -228,7 +228,7 @@
    "id": "30ecddad",
    "metadata": {},
    "source": [
-    "### Solution 5 (find first) -- exclude 8 and 9 length pandigitals"
+    "### Solution 5 (find first) -- exclude irrelevant pandigitals ranges"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "source": [
     "function largest_pandigital_prime()\n",
     "    valid_primes = Int[]\n",
-    "    for prime_range in [Primes.primes(parse(Int, join(1:i)), parse(Int, join(reverse(1:i)))) for i in 2:9 if !all(parse(Int64, join(p)) % 3 == 0 for p in Combinatorics.permutations(1:i))]\n",
+    "    for prime_range in [Primes.primes(parse(Int, join(1:i)), parse(Int, join(reverse(1:i)))) for i in 2:9 if sum(1:i) % 3 != 0]\n",
     "        append!(valid_primes, prime_range)\n",
     "    end\n",
     "    return firsttrue(ispandigital, reverse(valid_primes))\n",
@@ -385,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  194.199 ms (10741578 allocations: 384.43 MiB)\n"
+      "  7.802 ms (586 allocations: 11.36 MiB)\n"
      ]
     },
     {
