--- a/python/problem_041.ipynb
+++ b/python/problem_041.ipynb
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8min 48s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "8min 49s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "from sympy import primerange\n",
-    "from itertools import permutations "
+    "from itertools import permutations"
    ]
   },
   {
@@ -210,7 +210,8 @@
    "source": [
     "# valid pandigital lengths\n",
     "for i in range(2, 10):\n",
-    "    check = all(int(''.join(str(n) for n in p)) % 3 == 0 for p in permutations(range(1, i+1)))\n",
+    "    check = all(int(''.join(str(n) for n in p)) % 3 == 0 for p \\\n",
+    "                in permutations(range(1, i+1)))\n",
     "    print(f'{i} -> {not check}')"
    ]
   },
@@ -240,7 +241,7 @@
     "        primerange(\n",
     "            int(''.join(str(n) for n in range(1, i+1))), \n",
     "            int(''.join(str(n) for n in range(i, 0, -1)))+1\n",
-    "        ) for i in range(2, 10) if not all(int(''.join(str(n) for n in p)) % 3 == 0 for p in permutations(range(1, i+1)))]\n",
+    "        ) for i in range(2, 10) if not sum(range(1, i+1)) % 3 == 0]\n",
     "    for prime_range in prime_ranges:\n",
     "        valid_primes.extend(prime_range)\n",
     "    for p in valid_primes[::-1]:\n",
@@ -280,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.42 s ± 75.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3.03 s ± 39.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -307,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.4 s ± 6.28 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3.01 s ± 2.46 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
